external-crates/move/crates/move-compiler/tests/move_2024/matching/counterexample_ctor.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/matching/counterexample_ctor.move:9:16
  │
9 │         match (Option::Some(0)) {
  │                ^^^^^^^^^^^^^^^ Pattern 'Option::None' not covered

error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/matching/counterexample_ctor.move:15:16
   │
15 │         match (opt) {
   │                ^^^ Pattern 'Option::Some(Option::Some(_))' not covered

error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/matching/counterexample_ctor.move:22:16
   │
22 │         match (opt) {
   │                ^^^ Pattern 'Option::None' not covered
